...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0OJ-eV-4ps">
                                <rect key="frame" x="117" y="64" width="141" height="36"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="+ Add Reminder">
                                    <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
                                <connections>
                                    <segue destination="RcR-X0-yLg" kind="show" identifier="add_a_reminder" id="E2d-fl-8cD"/>
                                </connections>
                            </button>
...
                                                    <color key="backgroundColor" red="0.88235294119999996" green="0.67450980390000004" blue="0.33725490200000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="70" id="Jtf-vI-WcL"/>
                                                        <constraint firstAttribute="width" secondItem="EUv-vU-FHb" secondAttribute="height" multiplier="121:70" id="rvW-cZ-zrX"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                                    <state key="normal" title="Done">
                                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="onPressDone:" destination="ap4-Jo-ou2" eventType="touchUpInside" id="8yg-vt-Aab"/>
                                                    </connections>
                                                </button>
...
                            <mask key="constraints">
                                <exclude reference="CSU-vq-FaE"/>
                                <exclude reference="oRA-h6-emr"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Reminders" id="sBL-xf-qp5"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="tableView" destination="LEy-dr-2Oh" id="ZcN-81-ihF"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="OVr-kR-hbQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PO7-3N-LH9">
                                <rect key="frame" x="172.5" y="573" width="30" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="c5R-YS-4JN"/>
                                </constraints>
                                <state key="normal" title="Edit"/>
                                <connections>
                                    <segue destination="2hn-rH-IHs" kind="show" id="Ldz-JG-z9G"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DKp-pp-i4z">
                                <rect key="frame" x="64" y="79" width="247" height="114"/>
...
